Fix spacing for left side of the hero section

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 #hero-right {
     flex: 1 1 0;
